--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,6 @@ Build-Depends: debhelper-compat (= 13),
                dpkg-dev (>= 1.16.1.1),
                gnome-common,
                valac (>= 0.34.0),
-               valadoc,
                libbamf3-dev (>= 0.4),
                libcairo2-dev (>= 1.13.0),
                libdbusmenu-gtk3-dev (>= 0.6.2),
@@ -23,6 +22,7 @@ Build-Depends: debhelper-compat (= 13),
                at-spi2-core,
                dbus-x11,
                xvfb
+Build-Depends-Indep: valadoc,
 Vcs-Git: https://salsa.debian.org/debian-mate-team/plank.git
 Vcs-Browser: https://salsa.debian.org/debian-mate-team/plank
 Homepage: https://launchpad.net/plank
