--- a/debian/control
+++ b/debian/control
@@ -25,7 +25,7 @@ Build-Depends: debhelper-compat (= 13),
 Build-Depends-Indep: valadoc,
 Vcs-Git: https://salsa.debian.org/debian-mate-team/plank.git
 Vcs-Browser: https://salsa.debian.org/debian-mate-team/plank
-Homepage: https://launchpad.net/plank
+Homepage: https://gitlab.gnome.org/ricotz/plank/
 Standards-Version: 4.6.0
 Rules-Requires-Root: no
 
