--- a/debian/rules
+++ b/debian/rules
@@ -10,6 +10,8 @@ override_dh_install:
 	find debian/tmp -name *.la -delete
 	find debian/tmp -name *.a -delete
 	rm debian/tmp/usr/share/apport/package-hooks/source_plank.py
+	mkdir -p debian/tmp/usr/share/devhelp/books/
+	ln -s ../../doc/plank/html debian/tmp/usr/share/devhelp/books/html
 	dh_install
 
 override_dh_missing:
