--- a/debian/rules
+++ b/debian/rules
@@ -6,6 +6,16 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/buildflags.mk
 
+built_binaries := $(shell dh_listpackages)
+
+configure_options := --enable-headless-tests
+
+ifneq ($(filter %-doc,$(built_binaries)),)
+configure_options += --enable-docs
+else
+configure_options += --disable-docs
+endif
+
 override_dh_install:
 	find debian/tmp -name *.la -delete
 	find debian/tmp -name *.a -delete
@@ -18,10 +28,8 @@ override_dh_missing:
 	dh_missing --fail-missing
 
 override_dh_auto_configure:
-	dh_auto_configure -- \
-	        --enable-docs \
-	        --enable-headless-tests \
-	        $(NULL)
+	dh_auto_configure -- $(configure_options)
+	                     $(NULL)
 
 override_dh_auto_test:
 	dh_auto_test || true
