--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Uploaders: Debian+Ubuntu MATE Packaging Team <debian-mate@lists.debian.org>,
 Build-Depends: debhelper-compat (= 13),
                dpkg-dev (>= 1.16.1.1),
                gnome-common,
+               meson,
                valac (>= 0.34.0),
                libbamf3-dev (>= 0.4),
                libcairo2-dev (>= 1.13.0),
