--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: debhelper-compat (= 13),
                dpkg-dev (>= 1.16.1.1),
                gnome-common,
                meson,
+               git,
                valac (>= 0.34.0),
                libbamf3-dev (>= 0.4),
                libcairo2-dev (>= 1.13.0),
