--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper-compat (= 13),
                gnome-common,
                meson,
                git,
+               desktop-file-utils,
                valac (>= 0.34.0),
                libbamf3-dev (>= 0.4),
                libcairo2-dev (>= 1.13.0),
