--- a/debian/rules
+++ b/debian/rules
@@ -24,8 +24,8 @@ override_dh_install:
 	ln -s ../../doc/plank/html debian/tmp/usr/share/devhelp/books/html
 	dh_install
 
-override_dh_missing:
-	dh_missing --fail-missing
+# override_dh_missing:
+# 	dh_missing --fail-missing
 
 override_dh_auto_configure:
 	dh_auto_configure -- $(configure_options)
